--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     html, body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #fceabb, #f8b500);
+      background: white;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -26,42 +26,43 @@
       pointer-events: none;
     }
     h1 {
-      color: #d63384;
+      color: #e53935;
       z-index: 2;
       text-align: center;
       font-size: 32px;
     }
     .card {
-      background: linear-gradient(145deg, #ffffff, #f0f0f0);
+      background: #fff;
       border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       padding: 25px;
       width: 100%;
       max-width: 520px;
       text-align: center;
       z-index: 2;
+      border-top: 8px solid #e53935;
     }
     input[type="file"], input[type="number"] {
       margin: 10px 0;
       width: 100%;
       padding: 10px;
-      border-radius: 8px;
+      border-radius: 6px;
       border: 1px solid #ccc;
     }
     button {
-      background: linear-gradient(90deg, #d63384, #fd7e14);
+      background: #e53935;
       color: white;
       padding: 12px 20px;
       border: none;
-      border-radius: 10px;
+      border-radius: 8px;
       font-size: 16px;
       cursor: pointer;
       margin: 10px 0;
       width: 100%;
-      transition: transform 0.2s;
+      transition: background 0.2s ease;
     }
     button:hover {
-      transform: scale(1.03);
+      background: #c62828;
     }
     .resultado, .ruleta {
       margin-top: 20px;
@@ -70,43 +71,39 @@
       min-height: 60px;
     }
     .titular {
-      background: #d1ffe6;
-      border-left: 6px solid #28a745;
-      color: #155724;
-      padding: 15px;
-      border-radius: 10px;
+      background: #f8f9fa;
+      border-left: 5px solid #2e7d32;
+      color: #2e7d32;
+      padding: 12px;
+      border-radius: 6px;
     }
     .suplente {
-      background: #fff3cd;
-      border-left: 6px solid #ffc107;
-      color: #856404;
-      padding: 15px;
-      border-radius: 10px;
+      background: #fff8e1;
+      border-left: 5px solid #fbc02d;
+      color: #f57f17;
+      padding: 12px;
+      border-radius: 6px;
     }
     #generarPublicacion {
-      background: linear-gradient(90deg, #007bff, #6610f2);
-    }
-    a {
-      text-decoration: none;
-      color: #2a4d69;
-      font-weight: bold;
+      background: #3949ab;
     }
     .extensiones {
       font-size: 14px;
       margin-top: 10px;
-      color: #555;
+      color: #444;
     }
     .extensiones a {
       display: inline-block;
       margin: 5px;
       padding: 6px 10px;
-      background: #ffffff;
+      background: #f4f4f4;
+      border-radius: 6px;
       border: 1px solid #ddd;
-      border-radius: 8px;
-      transition: background 0.2s;
+      text-decoration: none;
+      color: #e53935;
     }
     .extensiones a:hover {
-      background: #f0f0f0;
+      background: #fff0f0;
     }
   </style>
 </head>
@@ -115,7 +112,7 @@
   <h1>🎉 Sorteo desde Instagram</h1>
   <div class="card">
     <p>
-      1. Usá una de las siguientes extensiones para exportar comentarios de Instagram:<br>
+      1. Usá una de las siguientes extensiones para exportar comentarios de Instagram:
     </p>
     <div class="extensiones">
       🔹 <a href="https://chromewebstore.google.com/detail/inscommentexport-descarga/bcbpabgcmmmofaddaliomhdpnbpnkhid?hl=es-419" target="_blank">InsCommentExport (para Chrome)</a><br>
@@ -125,7 +122,18 @@
       2. Exportá los comentarios de tu post en Instagram<br>
       3. Subí el archivo .csv o .xlsx para hacer el sorteo
     </p>
-    <!-- Aquí continúa el resto del contenido y scripts -->
+
+    <input type="file" id="archivo" accept=".csv,.xlsx">
+    <label for="cantGanadores">Cantidad de ganadores:</label>
+    <input type="number" id="cantGanadores" value="1" min="1">
+    <label for="cantSuplentes">Cantidad de suplentes:</label>
+    <input type="number" id="cantSuplentes" value="1" min="0">
+    <button onclick="sortear()">🎰 Realizar Sorteo</button>
+    <button id="generarPublicacion" onclick="generarPublicacion()">🧾 Generar Publicación</button>
+
+    <div class="ruleta" id="ruleta">Esperando archivo...</div>
+    <div class="resultado" id="resultado"></div>
+    <div id="captura" style="display:none; padding: 20px; background: #fff; margin-top:20px; border-radius: 12px; box-shadow: 0 0 10px #ccc; font-size: 16px; line-height: 1.5;"></div>
   </div>
 </body>
 </html>
