--- a/index.html
+++ b/index.html
@@ -135,5 +135,151 @@
     <div class="resultado" id="resultado"></div>
     <div id="captura" style="display:none; padding: 20px; background: #fff; margin-top:20px; border-radius: 12px; box-shadow: 0 0 10px #ccc; font-size: 16px; line-height: 1.5;"></div>
   </div>
+
+  <script>
+    let participantes = [];
+    let datosSorteo = {};
+
+    document.getElementById('archivo').addEventListener('change', function(e) {
+      const file = e.target.files[0];
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        const data = new Uint8Array(e.target.result);
+        const workbook = XLSX.read(data, {type: 'array'});
+        const sheet = workbook.Sheets[workbook.SheetNames[0]];
+        const raw = XLSX.utils.sheet_to_json(sheet, {header: 1});
+
+        if (raw[0].length === 1 && raw[0][0].includes(",")) {
+          const rows = raw.map(r => r[0].split(","));
+          const idx = rows[0].findIndex(h => h.toLowerCase().includes("username"));
+          participantes = rows.slice(1).map(r => r[idx]).filter(Boolean);
+        } else {
+          const headers = raw[0].map(h => h.toLowerCase());
+          const idx = headers.findIndex(h => h.includes("username"));
+          participantes = raw.slice(1).map(r => r[idx]).filter(Boolean);
+        }
+
+        alert(`Se cargaron ${participantes.length} participantes.`);
+      };
+      reader.readAsArrayBuffer(file);
+    });
+
+    function sortear() {
+      const ruleta = document.getElementById("ruleta");
+      const resultado = document.getElementById("resultado");
+      resultado.innerHTML = "";
+
+      const cantGanadores = parseInt(document.getElementById("cantGanadores").value);
+      const cantSuplentes = parseInt(document.getElementById("cantSuplentes").value);
+
+      if (participantes.length < (cantGanadores + cantSuplentes)) {
+        alert("No hay suficientes participantes.");
+        return;
+      }
+
+      let copia = [...participantes];
+      let ruletaInterval = setInterval(() => {
+        const nombre = copia[Math.floor(Math.random() * copia.length)];
+        ruleta.innerHTML = `🎲 Sorteando: <span style='color:#e53935'>${nombre}</span>`;
+      }, 100);
+
+      setTimeout(() => {
+        clearInterval(ruletaInterval);
+        const ganadores = [];
+        for (let i = 0; i < cantGanadores; i++) {
+          ganadores.push(copia.splice(Math.floor(Math.random() * copia.length), 1)[0]);
+        }
+        const suplentes = [];
+        for (let i = 0; i < cantSuplentes; i++) {
+          suplentes.push(copia.splice(Math.floor(Math.random() * copia.length), 1)[0]);
+        }
+
+        const fecha = new Date().toLocaleString();
+        const hash = Math.random().toString(36).substring(2, 10);
+
+        datosSorteo = { ganadores, suplentes, fecha, cantidad: participantes.length, hash };
+        ruleta.innerHTML = "🎉 ¡Sorteo completado!";
+        resultado.innerHTML = `
+          <div class="titular">🏆 Titulares:<br>${ganadores.join("<br>")}</div>
+          <div class="suplente">🧍 Suplentes:<br>${suplentes.join("<br>")}</div>
+          <div style="margin-top:10px;font-size:14px;">📅 ${fecha}<br>👥 Participantes: ${participantes.length}<br>🔒 Verificación: ${hash}</div>
+        `;
+        lanzarFuegosArtificiales();
+      }, 4000);
+    }
+
+    function generarPublicacion() {
+      const div = document.getElementById("captura");
+      div.style.display = "block";
+      div.innerHTML = `
+        <div style="font-size: 24px; font-weight: bold; color: #d63384; margin-bottom: 10px;">
+          🎉 Resultado del Sorteo
+        </div>
+        <div style="margin: 10px 0;">
+          <strong style="color:#6f42c1">🏆 Ganadores:</strong><br>
+          ${datosSorteo.ganadores?.join("<br>") || "-"}
+        </div>
+        <div style="margin: 10px 0;">
+          <strong style="color:#fd7e14">🧍 Suplentes:</strong><br>
+          ${datosSorteo.suplentes?.join("<br>") || "-"}
+        </div>
+        <div style="margin-top: 15px; font-size: 14px;">
+          📅 ${datosSorteo.fecha || "-"}<br>
+          👥 Participantes: ${datosSorteo.cantidad || 0}<br>
+          🔒 Hash: ${datosSorteo.hash || "-"}
+        </div>
+      `;
+      html2canvas(div).then(canvas => {
+        const link = document.createElement('a');
+        link.download = `sorteo_${new Date().toISOString().slice(0, 19).replace(/[:T]/g, '-')}.jpg`;
+        link.href = canvas.toDataURL("image/jpeg");
+        link.click();
+        div.style.display = "none";
+      });
+    }
+
+    const canvas = document.getElementById("fuegos");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    const fuegos = [];
+
+    function crearFuego() {
+      const x = Math.random() * canvas.width;
+      const y = canvas.height;
+      const vy = Math.random() * -7 - 5;
+      const color = `hsl(${Math.random() * 360}, 100%, 60%)`;
+      fuegos.push({x, y, vy, color, alpha: 1});
+    }
+
+    function actualizarFuegos() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      fuegos.forEach((f, i) => {
+        f.y += f.vy;
+        f.alpha -= 0.02;
+        ctx.globalAlpha = f.alpha;
+        ctx.beginPath();
+        ctx.arc(f.x, f.y, 4, 0, Math.PI * 2);
+        ctx.fillStyle = f.color;
+        ctx.fill();
+        if (f.alpha <= 0) fuegos.splice(i, 1);
+      });
+      ctx.globalAlpha = 1;
+    }
+
+    function lanzarFuegosArtificiales() {
+      let count = 0;
+      const launch = setInterval(() => {
+        for (let i = 0; i < 10; i++) crearFuego();
+        if (++count > 15) clearInterval(launch);
+      }, 150);
+    }
+
+    function animar() {
+      requestAnimationFrame(animar);
+      actualizarFuegos();
+    }
+    animar();
+  </script>
 </body>
 </html>
