--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,20 +9,29 @@
     html, body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: white;
+      background: linear-gradient(to right, #ffffff, #ffe6e6);
       display: flex;
       flex-direction: column;
       align-items: center;
       padding: 20px;
       position: relative;
-      overflow-x: hidden;
       min-height: 100vh;
       color: #333;
+    }
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      z-index: 0;
+      pointer-events: none;
     }
     h1 {
       color: #e53935;
       font-size: 32px;
       margin-bottom: 10px;
+      z-index: 2;
     }
     .card {
       background: #fff;
@@ -34,6 +42,7 @@
       max-width: 520px;
       text-align: center;
       border-top: 8px solid #e53935;
+      z-index: 2;
     }
     input[type="file"], input[type="number"] {
       margin: 10px 0;
@@ -64,6 +73,7 @@
   </style>
 </head>
 <body>
+  <canvas id="fuegos"></canvas>
   <h1>🎉 Sorteo desde Instagram</h1>
   <div class="card">
     <input type="file" id="archivo" accept=".csv,.xlsx">
@@ -77,6 +87,48 @@
 
   <script>
     let participantes = [];
+    const canvas = document.getElementById("fuegos");
+    const ctx = canvas.getContext("2d");
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+    const fuegos = [];
+
+    function crearFuego() {
+      const x = Math.random() * canvas.width;
+      const y = canvas.height;
+      const vy = Math.random() * -7 - 5;
+      const color = `hsl(${Math.random() * 360}, 100%, 60%)`;
+      fuegos.push({x, y, vy, color, alpha: 1});
+    }
+
+    function actualizarFuegos() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      fuegos.forEach((f, i) => {
+        f.y += f.vy;
+        f.alpha -= 0.02;
+        ctx.globalAlpha = f.alpha;
+        ctx.beginPath();
+        ctx.arc(f.x, f.y, 4, 0, Math.PI * 2);
+        ctx.fillStyle = f.color;
+        ctx.fill();
+        if (f.alpha <= 0) fuegos.splice(i, 1);
+      });
+      ctx.globalAlpha = 1;
+    }
+
+    function lanzarFuegosArtificiales() {
+      let count = 0;
+      const launch = setInterval(() => {
+        for (let i = 0; i < 10; i++) crearFuego();
+        if (++count > 15) clearInterval(launch);
+      }, 150);
+    }
+
+    function animar() {
+      requestAnimationFrame(animar);
+      actualizarFuegos();
+    }
+    animar();
 
     document.getElementById('archivo').addEventListener('change', function(e) {
       const file = e.target.files[0];
@@ -106,6 +158,7 @@
       const resultado = document.getElementById("resultado");
       const cantGanadores = parseInt(document.getElementById("cantGanadores").value);
       const cantSuplentes = parseInt(document.getElementById("cantSuplentes").value);
+
       if (participantes.length < (cantGanadores + cantSuplentes)) {
         alert("No hay suficientes participantes.");
         return;
@@ -131,7 +184,8 @@
         <div style="font-size:14px;margin-top:10px;">📅 ${fecha}<br>🔒 Hash: ${hash}</div>
       `;
 
-      // Guardar en el backend (Netlify/Vercel)
+      lanzarFuegosArtificiales();
+
       fetch('https://soretoss.vercel.app/api/save-hash', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
