--- a/index.html
+++ b/index.html
@@ -204,9 +204,13 @@ window.onload = () => {
         alert("No se encontró la columna 'username' en el archivo.");
         return;
       }
+participantes = raw.slice(1).map(r => {
+  const campo = typeof r[idx] === 'string' ? r[idx] : '';
+  const match = campo.match(/(@\w{2,30})/);
+  return match ? match[1] : null;
+}).filter(Boolean);
 
-      participantes = raw.slice(1).map(r => (typeof r[idx] === 'string' ? r[idx].split(',')[0].replace(/\"/g, '').trim() : r[idx])).filter(Boolean);
-
+     
       alert(`Se cargaron ${participantes.length} participantes.`);
     };
     reader.readAsArrayBuffer(file);
@@ -215,4 +219,3 @@ window.onload = () => {
 </script>
 </body>
 </html>
-
